<resources>
    <string name="app_name">Find My Roommate</string>
    <string name="title_text">Find My Room mate</string>
    <string name="sign_in_button" type="id">Sign In</string>
    <string name="facebook_application_id">210068689453269</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_title">Welcome aboard</string>
    <string name="welcome_message">To get started with Find My Roommate, follow the simple tutorial to understand the app better.</string>
    <string name="got_it">Got It</string>
    <string name="message_content">To get started, complete your profile, set your preferences and we will start finding best available room mate for you!</string>
    <string name="get_started">Get Started</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="profile_picture_desc">Profile Picture Description</string>
    <string name="welcome">Welcome</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="user_feedback">Feedback</string>
    <string name="user_preference">Preferences</string>
    <string name="user_logout">Logout</string>
    <string name="find_my_roommates">Find My Roommates</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_sign_in_response">Unknown Sign In Response</string>
    <string name="delete_user_account">Delete Account</string>
    <string name="edit_user_bio">Edit User Bio</string>
    <string name="profile_pic">profile pic</string>
    <string name="feedback_title">Your feedback is important to us!</string>
    <string name="feedback_name">Name: </string>
    <string name="feedback_email">Email: </string>
    <string name="feedback_type">Feedback Type</string>
    <string name="sex_type">Sex</string>
    <string name="profession_type">Profession</string>
    <string name="google_maps_key">AIzaSyCiYP2D7yrtVyiqGK1PLXz1rapOl-cLm8c</string>
    <string name="feedback_type_1">Great App</string>
    <string name="feedback_type_2">Not Good</string>
    <string name="feedback_type_3">Suggestion/Improvement</string>
    <string name="feedback_type_4">Defect</string>
    <string name="feedback_body">Feedback Content</string>
    <string name="feedback_response">Response</string>
    <string name="feedback_button">Send Feedback</string>
    <string name="additional_preferences_content">Please provide us any additional preferences like cleanliness, knowledge of cooking , etc</string>
    <string name="find_my_roommate">Find My Roommate/s</string>
    <string name="user_bio">Tell us something about yourself(max 100 words)</string>
    <string name="user_bio_content">Having a bio is recommended because we share this information with your future roommate. An ex would be friendliness and gym freak.</string>
    <string name="user_profile_title">Edit User Profile</string>
    <string name="user_profile_email">Email ID:</string>
    <string name="user_profile_address">Address</string>
    <string name="send_edit_user_profile">Update User Profile</string>
    <string name="user_profile_mobile_number">Mobile</string>
    <string name="user_profile_name_user_name">Name</string>
    <string name="sex_type_1">Male</string>
    <string name="sex_type_2">Female</string>
    <string name="neutral_option">I don\'t want to provide this info</string>
    <string name="destination_hint">Please Enter Address</string>
    <string name="powered_by_google_text">Address Search Powered By Google</string>
    <string name="selected_place">Selected Place:</string>
    <string name="please_select">Please Select</string>
    <string name="occupation_type_1">Student</string>
    <string name="occupation_type_2">Working Professional</string>
    <string name="same_address_location">Same As Profile Address</string>
    <string name="different_address_location">Different Location Address</string>
    <string name="enter_desired_location">Address</string>
    <string name="search_criteria">Search Criteria:</string>
    <string name="address">Address:</string>
    <string name="occupation">Occupation</string>
    <string name="sex">Sex</string>
    <string name="search_criteria_one">I have a rented/own flat. Looking out for a room mate</string>
    <string name="search_criteria_two">Looking out for a vacancy in already rented flat.</string>
    <string name="search_criteria_three">Looking out for roommate. Will book flat later.</string>
    <string name="dietary_preference_one">Vegan</string>
    <string name="dietary_preference_two">Vegetarian</string>
    <string name="dietary_preference_three">No meat but eggs allowed</string>
    <string name="dietary_preference_four">Non Vegetarian</string>
    <string name="dietary_preference_five">Doesn\'t matter</string>
    <string name="dietary_preference">Dietary Preference</string>
    <string name="update_bio">Update Bio</string>
    <string name="additional_preference">Additional Preference</string>
    <string name="search_criteria_text">Housing Options</string>
    <string name="user_search_result">Matched Users</string>
    <string name="contact_user">Contact User/s</string>
</resources>
