<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/edit_user_profile_id">

        <TextView
            android:id="@+id/user_profile_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/user_profile_title"
            android:textAlignment="center"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/user_email_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/user_profile_email"
            android:paddingLeft="5dp"
            android:paddingStart="5dp" />

        <EditText
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_profile_name_first_name" />

        <EditText
            android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_profile_name_last_name" />

        <EditText
            android:id="@+id/user_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_profile_mobile_number"
            android:inputType="number"
            android:maxLength="10" />


        <EditText
            android:id="@+id/user_profile_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_profile_address"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textAlignment="center" />

        <Button
            android:id="@+id/send_user_profile_response"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_edit_user_profile"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>