<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/welcome_message_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#036e64"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_title"
            android:textColor="#ddd"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_title"
            android:text="@string/welcome_message"
            android:textColor="#ddd"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dismiss_welcome_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:background="#3b978d"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/got_it"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_content_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#036e64"
        android:padding="16dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/message_content"
            android:textColor="#ddd"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dismiss_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:background="#3b978d"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/get_started"
            android:textColor="#fff" />

    </RelativeLayout>
</RelativeLayout>