<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/profile_pic"
            android:scaleType="centerCrop"
            android:src="@drawable/navigation_header_image" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile_circular_border_image_view"
            android:contentDescription="@string/profile_pic"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_short_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textColor="@color/tw__composer_black"
                android:textSize="24sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/user_bio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:background="#4d6fff"
            android:clickable="true"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/edit_user_bio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/edit_user_bio"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/edit_user_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/edit_user_profile"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/find_my_roommates"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/find_my_roommates"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/user_feedback"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/user_logout"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_user_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="20dp"
                android:text="@string/delete_user_account"
                android:textAlignment="center"
                android:textColor="#3b978d"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>